--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,2 @@
-<button class="btn btn-success" (click)="confirmar()">Mostrar</button><hr>
-<button mat-raised-button>Open file</button><hr>
-<button mat-stroked-button>Basic</button><hr>
-<mat-card>
-    <mat-card-content>Simple card</mat-card-content>
-</mat-card>
+<app-navbar></app-navbar>
+<div class="main"><router-outlet></router-outlet></div>
