Diseño del navbar

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,28 +1,34 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">
-        <img src="../../assets/favicon.ico" alt="" style="width: 30px; height:40px; margin-left: 1rem;">
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="btn btn-sm btn-outline-success" style="margin: 1rem; padding:0.5em;"routerLink="/Inicio">Inicio</a>
-        </li>
-        <li class="nav-item">
-          <a class="btn btn-sm btn-outline-primary" style="margin: 1rem; padding:0.5em;" routerLink="/Mostrar">Habitaciones reservadas</a>
-        </li>
-        <li class="nav-item">
-            <a class="btn btn-sm btn-outline-primary" style="margin: 1rem; padding:0.5em;" routerLink="/Capturar">Realizar reservacion</a>
-          </li>
-        <li class="nav-item">
-            <a class="btn btn-sm btn-outline-primary" style="margin: 1rem; padding:0.5em;" routerLink="/Acerca">Acerca de la pagina</a>
-        </li>
-      </ul>
-    </div>
-    <form class="d-flex">
-      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Buscar" style="padding-right: 1erm;">
-      <button class="btn btn-outline-success" type="submit">Search</button>
-    </form>
-  </nav>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <header class="header bg-dark">
+        <p style="color:wheat;font-family: 'Times New Roman', Times, serif;">Hotel QuintaReal</p>
+        <div class="logo">
+            <img src="../../assets/favicon.ico" alt="">
+        </div>
+        <nav>
+           <ul class="nav-links">
+                <li><a routerLink="/Inicio">Inicio</a></li>
+                <li><a routerLink="/Capturar">Reservar habitacion</a></li>
+                <li><a routerLink="/Mostrar">Consultar Reservas</a></li>
+                <li><a routerLink="/Acerca">Acerca del hotel</a></li>
+           </ul>            
+        </nav>
+        <div class="buscar">
+            <input type="text" placeholder="Buscar" required />
+      
+            <div class="btn">
+              <i class="fas fa-search icon"></i>
+            </div>
+          </div>
+    </header>
+
