--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -24,7 +24,7 @@
            </ul>            
         </nav>
         <div class="buscar">
-            <input type="text" placeholder="Buscar" required />
+            <input type="text" placeholder="Buscar reservacion" required />
       
             <div class="btn">
               <i class="fas fa-search icon"></i>
