Se agrego la interfaz cliente, ademas de un formulario que captura datos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,6 @@
 <mat-card>
     <mat-card-content>Simple card</mat-card-content>
 </mat-card>
+
+<app-alta-cliente></app-alta-cliente>
+<app-listado-clientes></app-listado-clientes>
