Crea nuevas variables en la interfaz, ademas que se le da diseño al formulario y la tabla

--- a/src/app/clientes/alta-cliente/alta-cliente.component.html
+++ b/src/app/clientes/alta-cliente/alta-cliente.component.html
@@ -1,28 +1,48 @@
 <h2>Ingresa tus datos para reservar</h2>
-<p>
-  <span>Nombre:</span>
-  <input type="text" [(ngModel)]="cliente.nombre">
-</p>
-<p>
-  <span>Apellido:</span>
-  <input type="text" [(ngModel)]="cliente.apellido">
-</p>
-<p>
-  <span>Habitacion:</span>
-  <input type="number" [(ngModel)]="cliente.habitacion">
-</p>
-<p>
-<p>
-  <span>Pago:</span>
-  <input type="number" [(ngModel)]="cliente.pago">
-</p>
-<p>
-  <span>Grupo:</span>
-  <select [(ngModel)]="cliente.grupo">
-    <option *ngFor="let grupo of grupos" value="{{grupo.id}}">{{grupo.nombre}}</option>
-  </select>
-</p>
+<h4>Es obligatorio llenar todos los espacios</h4>
 
-<p>
-  <button (click)="this.nuevoCliente()">Guardar</button>
-</p>
+<form [formGroup]="formularioAlta" (ngSubmit)="nuevoCliente()" class="formularioCss">
+  <p>Nombre:
+    <input type="text" formControlName="nombre" [(ngModel)]="cliente.nombre" required>
+    <span *ngIf="this.formularioAlta.get('nombre')?.errors?.['required']"></span>
+    <span *ngIf="this.formularioAlta.get('nombre')?.errors?.['minlength']"> <br>
+      (Debe tener como mínimo 3 caracteres)
+    </span>
+  </p>
+  <p>Apellido:
+    <input type="text" formControlName="apellido" [(ngModel)]="cliente.apellido" required>
+    <span *ngIf="this.formularioAlta.get('apellido')?.errors?.['required']"></span>
+    <span *ngIf="this.formularioAlta.get('apellido')?.errors?.['minlength']"> <br>
+      (Debe tener como mínimo 4 caracteres)
+    </span>
+  </p>
+  <p>No. Celular:
+    <input type="tel" formControlName="telefono" [(ngModel)]="cliente.nTel" required>
+    <span *ngIf="this.formularioAlta.get('telefono')?.errors?.['required']"></span>
+    <span *ngIf="this.formularioAlta.get('telefono')?.errors?.['minlength']"> <br>
+      (Debe tener un mínimo de 10 digitos)
+    </span>
+  </p>
+  <p>Habitacion:
+    <input type="number" formControlName="habitacion" [(ngModel)]="cliente.habitacion" required>
+    <span *ngIf="this.formularioAlta.get('habitacion')?.errors?.['required']"></span>
+    <span *ngIf="this.formularioAlta.get('habitacion')?.errors?.['max']"> <br>
+      (Como máximo hay 50 habitaciones)
+    </span>
+  </p>
+  <p>No. Personas:
+    <input type="number" formControlName="personas" [(ngModel)]="cliente.nPersona" required>
+    <span *ngIf="this.formularioAlta.get('personas')?.errors?.['required']"></span>
+    <span *ngIf="this.formularioAlta.get('personas')?.errors?.['max']"> <br>
+      (Como máximo 4 personas en la habitación)
+    </span>
+  </p>
+  <p>Correo:
+    <input type="text" formControlName="mail" [(ngModel)]="cliente.correo">
+    <span *ngIf="this.formularioAlta.get('mail')?.errors?.['required']"></span>
+    <span *ngIf="this.formularioAlta.get('mail')?.errors?.['email']"> <br>
+      (El correo no es válido)
+    </span>
+  </p>
+  <button type="submit" (click)="this.nuevoCliente()">Confirmar</button>
+</form>
