--- a/src/app/clientes/listado-clientes/listado-clientes.component.html
+++ b/src/app/clientes/listado-clientes/listado-clientes.component.html
@@ -1,12 +1,29 @@
-<h2>
-  Listado de reservaciones
-</h2>
-<div *ngIf="! clientes.length">No hay reservaciones por el momento</div>
-<div>
-  <article *ngFor="let cliente of clientes">
-    <span>{{cliente.nombre}}</span>
-    <span>{{cliente.apellido}}</span>
-    <span>{{cliente.habitacion}}</span>
-    <span>{{cliente.grupo}}</span>
-  </article>
+<div class="container py-4">
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-10">
+      <h1> Lista de reservaciones </h1>
+      <div *ngIf="! clientes.length">No hay reservaciones por el momento</div>
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th scope="col"> Nombre </th>
+            <th scope="col"> Apellido </th>
+            <th scope="col"> Habitación </th>
+            <th scope="col"> Correo </th>
+            <th scope="col"> # Personas </th>
+          </tr>
+        </thead>
+      
+        <tbody *ngFor="let cliente of clientes">
+          <tr class="table-light">
+            <td> {{cliente.nombre}} </td>
+            <td> {{cliente.apellido}} </td>
+            <td> {{cliente.habitacion}} </td>
+            <td> {{cliente.correo}} </td>
+            <td> {{cliente.nPersona}} </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
