--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-alta-cliente></app-alta-cliente>
-<app-listado-clientes></app-listado-clientes>
+<a routerLink="alta">altas</a><br>
+<a routerLink="lista">lista</a>
+<router-outlet></router-outlet>
