--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -17,10 +17,10 @@
         </div>
         <nav>
            <ul class="nav-links">
-                <li><a routerLink="/Inicio">Inicio</a></li>
-                <li><a routerLink="/Capturar">Reservar habitacion</a></li>
-                <li><a routerLink="/Mostrar">Consultar Reservas</a></li>
-                <li><a routerLink="/Acerca">Acerca del hotel</a></li>
+                <li><a routerLink="/inicio">Inicio</a></li>
+                <li><a routerLink="/alta">Reservar habitacion</a></li>
+                <li><a routerLink="/lista">Consultar Reservas</a></li>
+                <li><a routerLink="/acerca">Acerca del hotel</a></li>
            </ul>            
         </nav>
         <div class="buscar">
