--- a/src/app/clientes/alta-cliente/alta-cliente.component.css
+++ b/src/app/clientes/alta-cliente/alta-cliente.component.css
@@ -8,11 +8,11 @@ body {
     margin-right: auto;
     margin-top: 2px;
     width: 40%; 
-    height: 900px;
+    height: 120%;
     background: #e6e6e6;
     border-radius: 8px;
     box-shadow: 0 0 20px -10px #000;
-    padding: 20px 10px;
+    padding: 10px 5px;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
     position: relative
@@ -36,7 +36,6 @@ h4{
 
 input{
     width: 100%;
-    padding: 5px;
     box-sizing: border-box;
     background: none;
     outline: none;
@@ -54,7 +53,7 @@ input:focus {
 p:before {
     content: attr(type);
     display: block;
-    margin: 28px 0 0;
+    margin: 7px 0 0;
     font-size: 14px;
     color: #5a5a5a
 }
@@ -76,20 +75,10 @@ button:hover {
     color: #fff
 }
 
-/*div {
-    content: 'Hi';
-    position: absolute;
-    bottom: -1%;
-    right: -5%;
-    background: #50505a;
-    color: #fff;
-    width: 60%;
-    padding: 16px 4px 16px 0;
-    border-radius: 6px;
-    font-size: 13px;
-    box-shadow: 10px 10px 40px -14px #000;
-}*/
-
 span {
     margin: 0 5px 0 15px;
+}
+
+div{
+    padding: 2px;
 }
