--- a/src/app/clientes/listado-clientes/listado-clientes.component.html
+++ b/src/app/clientes/listado-clientes/listado-clientes.component.html
@@ -11,6 +11,8 @@
             <th scope="col"> Habitación </th>
             <th scope="col"> Correo </th>
             <th scope="col"> # Personas </th>
+            <th scope="col"> Fecha de Reservacion </th>
+            <th scope="col"> Hora de Reservacion </th>
           </tr>
         </thead>
       
@@ -21,6 +23,8 @@
             <td> {{cliente.habitacion}} </td>
             <td> {{cliente.correo}} </td>
             <td> {{cliente.nPersona}} </td>
+            <td> {{cliente.fecha}} </td>
+            <td> {{cliente.hora}} </td>
           </tr>
         </tbody>
       </table>
