Agregado de componentes ademas de desarrollo del about

--- a/src/app/acerca/acerca.component.html
+++ b/src/app/acerca/acerca.component.html
@@ -1,1 +1,7 @@
-<p>acerca works!</p>
+<mat-card>
+    <mat-card-content>
+    El presente proyecto es universitario, nunca fue diseñado para un uso comercial <br>
+    Fue creado por alumnos de la Universidad Autonoma de Aguascalientes <br><br>
+    <img src="../../assets/Autores/uaa.png" alt="UAA">
+     </mat-card-content>
+</mat-card>
