--- a/src/app/clientes/listado-clientes/listado-clientes.component.html
+++ b/src/app/clientes/listado-clientes/listado-clientes.component.html
@@ -18,7 +18,7 @@
       
         <tbody *ngFor="let cliente of clientes">
           <tr class="table-light">
-            <td> {{cliente.nombre}} </td>
+            <td> {{cliente.nombre}} </td> 
             <td> {{cliente.apellido}} </td>
             <td> {{cliente.habitacion}} </td>
             <td> {{cliente.correo}} </td>
@@ -30,4 +30,8 @@
       </table>
     </div>
   </div>
+</div>
+<hr>
+<div>
+  <full-calendar [options]="calendarOptions"></full-calendar>
 </div>
