--- a/src/app/acerca/acerca.component.html
+++ b/src/app/acerca/acerca.component.html
@@ -5,3 +5,48 @@
     <img src="../../assets/Autores/uaa.png" alt="UAA">
      </mat-card-content>
 </mat-card>
+<div class="container text-center">
+    <div class="row">
+      <div class="col">
+        <div class="card" style="width: 18rem;">
+            <img src="../../assets/Autores/antonio.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">
+                Juan Antonio Maldonado Nepomuceno <br>
+                Al295915
+              </p>
+            </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card" style="width: 18rem;">
+            <img src="../../assets/Autores/carlos.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">
+                Carlos Francisco García Murillo <br>
+                Al238938
+              </p></div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card" style="width: 18rem;">
+            <img src="../../assets/Autores/emilio.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">
+                Manuel Emilio Cruz Arvilla <br>Al297749
+              </p>
+            </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card" style="width: 18rem;">
+            <img src="../../assets/Autores/saul.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">
+                Carlos Saul Torres Alba <br>Al275554
+              </p>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
