--- a/src/app/acerca/acerca.component.html
+++ b/src/app/acerca/acerca.component.html
@@ -1,14 +1,17 @@
 <mat-card>
     <mat-card-content>
+      <h2>Acerca de Nosotros y el proyecto</h2>
+      <img src="../../assets/Autores/uaa.png" alt="UAA"><br>
     El presente proyecto es universitario, nunca fue diseñado para un uso comercial <br>
     Fue creado por alumnos de la Universidad Autonoma de Aguascalientes <br><br>
-    <img src="../../assets/Autores/uaa.png" alt="UAA">
+    
      </mat-card-content>
 </mat-card>
+
 <div class="container text-center">
     <div class="row">
       <div class="col">
-        <div class="card" style="width: 18rem;">
+        <div class="card" style="width: 14rem;">
             <img src="../../assets/Autores/antonio.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">
@@ -19,7 +22,7 @@
         </div>
       </div>
       <div class="col">
-        <div class="card" style="width: 18rem;">
+        <div class="card" style="width: 14rem;">
             <img src="../../assets/Autores/carlos.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">
@@ -29,17 +32,17 @@
         </div>
       </div>
       <div class="col">
-        <div class="card" style="width: 18rem;">
-            <img src="../../assets/Autores/emilio.jpg" class="card-img-top" alt="...">
+        <div class="card" style="width: 14rem;">
+            <img src="../../assets/Autores/autor1.png" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">
-                Manuel Emilio Cruz Arvilla <br>Al297749
+                Jesus Alberto Romo Mendez<br>Al276045
               </p>
             </div>
         </div>
       </div>
       <div class="col">
-        <div class="card" style="width: 18rem;">
+        <div class="card" style="width: 14rem;">
             <img src="../../assets/Autores/saul.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">
@@ -48,5 +51,92 @@
             </div>
         </div>
       </div>
+     
+      <div class="col">
+        <div class="card" style="width: 14rem;">
+            <img src="../../assets/Autores/autor2.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">
+                Jesus Eduardo Tapia Avalos <br>
+                Al243746
+              </p>
+            </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card" style="width: 14rem;">
+            <img src="../../assets/Autores/autor3.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">
+                Eduardo de Jesus Cruz Ramos <br>
+                Al290478
+              </p>
+            </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card" style="width: 14rem;">
+            <img src="../../assets/Autores/autor4.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">
+                Juan Miguel Casillas Romo <br>
+                Al298482
+              </p>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div><br>
+  <mat-divider></mat-divider>
+  <div class="container">
+    <h2 class="text-center mt-5 mb-4">Preguntas Frecuentes</h2>
+  
+    <div class="accordion" id="faqAccordion">
+      <div class="accordion-item">
+        <h3 class="accordion-header" id="faqHeading1">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse1" aria-expanded="true" aria-controls="faqCollapse1">
+            ¿Cuál es el horario de atención?
+          </button>
+        </h3>
+        <div id="faqCollapse1" class="accordion-collapse collapse show" aria-labelledby="faqHeading1" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Nuestro horario de atención es de lunes a viernes, de 9:00 a.m. a 6:00 p.m.
+          </div>
+        </div>
+      </div>
+  
+      <div class="accordion-item">
+        <h3 class="accordion-header" id="faqHeading2">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse2" aria-expanded="false" aria-controls="faqCollapse2">
+            ¿Cuáles son las formas de pago aceptadas?
+          </button>
+        </h3>
+        <div id="faqCollapse2" class="accordion-collapse collapse" aria-labelledby="faqHeading2" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Aceptamos pagos con tarjeta de crédito y efectivo
+          </div>
+        </div>
+      </div>
+  
+      <div class="accordion-item">
+        <h3 class="accordion-header" id="faqHeading3">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse3" aria-expanded="false" aria-controls="faqCollapse3">
+            ¿Es una pagina real?
+          </button>
+        </h3>
+        <div id="faqCollapse3" class="accordion-collapse collapse" aria-labelledby="faqHeading3" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Esta pagina es un proyecto escolar sin fines de lucro
+          </div>
+        </div>
+      </div>
     </div>
   </div>
+
+  <br><br>
+  
+
+
+  
+
+  
