--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -123,7 +123,7 @@
   </div>
   <mat-tab-group>
     <mat-tab label="Especificaciones">
-      Habitaciones: El hotel tendrá 50 habitaciones para alojar a los huéspedes, que pueden variar en tamaño y comodidades, desde habitaciones estándar hasta suites.
+     <b> Habitaciones:</b> El hotel tendrá 50 habitaciones para alojar a los huéspedes, que pueden variar en tamaño y comodidades, desde habitaciones estándar hasta suites.
 
       Áreas públicas: El hotel tendrá áreas públicas para los huéspedes, como vestíbulos, áreas de recepción, pasillos, escaleras, elevadores y otros espacios comunes. Estas áreas suelen estar decoradas con muebles y elementos de diseño para crear una atmósfera acogedora y confortable.
   
@@ -138,10 +138,10 @@
       Marketing y promoción: El hotel también puede contar con un equipo de marketing y promoción para atraer a nuevos clientes y mantener a los huéspedes actuales satisfechos. Esto puede incluir publicidad, marketing digital, relaciones públicas y estrategias de fidelización de clientes.
     </mat-tab>
     <mat-tab label="Precio de las habitaciones">
-      1000 pesos por noche 
+     <b>Precio:</b> El precio de una habitacion en nuestros hoteles es de 1000 pesos por noche 
     </mat-tab>
     <mat-tab label="Servicios que se ofrecen"> 
-      Alojamiento: Los hoteles ofrecen habitaciones o suites para que los huéspedes se alojen durante su estadía.
+      <b> Alojamiento:</b> Los hoteles ofrecen habitaciones o suites para que los huéspedes se alojen durante su estadía.
 
       Servicio de limpieza: El hotel ofrece servicio de limpieza diario de la habitación y cambio de toallas y sábanas.
   
@@ -164,7 +164,7 @@
   </mat-tab-group>
   
   <hr>
-
+  
 
   <div class="container py-4">
     <div class="row justify-content-center">
@@ -191,5 +191,9 @@
     </div>
   </div>
 
+  <mat-divider></mat-divider><br>
+
+  <div class="yt">
   <iframe width="560" height="315" [src]="video | domseguro:'https://www.youtube.com/embed/' " frame border="0"
     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-inpicture" allowfullscreen></iframe>
+  </div>
