--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -21,6 +21,7 @@
                 <li><a routerLink="/alta">Reservar habitacion</a></li>
                 <li><a routerLink="/lista">Consultar Reservas</a></li>
                 <li><a routerLink="/acerca">Acerca del hotel</a></li>
+                <li><a routerLink="/contacto">Contacto</a></li>
            </ul>            
         </nav>
         <div class="buscar">
