--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="width: 100%;">
   <div>
     <h1>Hotel QuintaReal</h1>
     <br>
@@ -32,7 +32,7 @@
     <h2>Algunos hoteles hermanos que puedes visitar</h2>
   </div>
 
-  <div class="gallery-container">
+  <div class="gallery-container" style="width: 100%;">
     <figure>
       <img src="../../assets/img/hotel1.jpg" alt="blog post one" />
       <h2>Four Seasons Hotel George V Paris</h2>
@@ -166,11 +166,11 @@
   <hr>
   
 
-  <div class="container py-4">
+  <div class="container py-4" style="width: 100%;">
     <div class="row justify-content-center">
       <div class="col-12 col-md-10">
         <h3 class="text-center mb-4">¡Contamos con hoteles en otros paises!</h3>
-        <table class="table table-hover">
+        <table class="table table-hover" style="width: 100%;">
           <thead>
             <tr>
               <th scope="col"> Pais </th>
@@ -183,7 +183,7 @@
             <tr class="table-light">
               <td> {{hotel.name}} </td>
               <td> {{hotel.capital}} </td>
-              <td><img src="{{hotel.flag}}" alt="" width="50" height="50"></td>
+              <td><img src="{{hotel.flag}}" alt="" width="100%" height="20"></td>
             </tr>
           </tbody>
         </table>
@@ -193,7 +193,7 @@
 
   <mat-divider></mat-divider><br>
 
-  <div class="yt">
-  <iframe width="560" height="315" [src]="video | domseguro:'https://www.youtube.com/embed/' " frame border="0"
+  <div class="yt" style="width: 100%;">
+  <iframe width="100%" height="300" [src]="video | domseguro:'https://www.youtube.com/embed/' " frame border="0"
     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-inpicture" allowfullscreen></iframe>
   </div>
