--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,28 +10,35 @@
       referrerpolicy="no-referrer"
     />
 
-    <header class="header bg-dark">
-        <p style="color:wheat;font-family: 'Times New Roman', Times, serif;">Hotel QuintaReal</p>
-        <div class="logo">
-            <img src="../../assets/favicon.ico" alt="">
-        </div>
-        <nav>
-           <ul class="nav-links">
-                <li><a routerLink="/inicio">Inicio</a></li>
-                <li><a routerLink="/alta">Reservar habitacion</a></li>
-                <li><a routerLink="/lista">Consultar Reservas</a></li>
-                <li><a routerLink="/acerca">Acerca del hotel</a></li>
-                <li><a routerLink="/contacto">Contacto</a></li>
-           </ul>            
-        </nav>
-        <div class="buscar">
-            <input type="text" placeholder="Buscar reservacion" [(ngModel)]="texto" requered/>
-      
-            <button class="btn" (click)="buscar()">
-              <i class="fas fa-search icon"></i>
-            </button>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+       <div class="container-fluid" style="margin-left: 20px;">
+        <p style="color:wheat;font-family: 'Times New Roman', Times, serif;">Hotel QuintaReal 
+            <a href="#"><img class="logo" src="../../assets/favicon.ico" alt=""></a>
+        </p>
+       
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle 
+          navigation" style="margin-right: 10%;">
+          <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+           <ul class="nav-links navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item"><a class="nav-link" routerLink="/inicio">Inicio</a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="/alta">Reservar habitacion</a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="/lista">Consultar Reservas</a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="/acerca">Acerca del hotel</a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="/contacto">Contacto</a></li>
+           </ul> 
+           <div class="buscar"> 
+            
+              <input  class="form-control me-2" type="text" placeholder="Buscar reservacion" [(ngModel)]="texto" requered/>
+              <button class="btn" style="margin-right: 5%; margin-bottom: 50%;" (click)="buscar()">
+                <i class="fas fa-search icon"></i>
+              </button>
+          </div>  
           </div>
-    </header>
+        </div>
+    </nav>
   
     <div *ngIf="bandera; else error" class="container position-relative">
       
